added hero component

--- a/client/sass/style.scss
+++ b/client/sass/style.scss
@@ -11,5 +11,8 @@
 // Portfolio Styles
 @import '../components/Portfolio/Portfolio';
 
+// Hero Styles
+@import '../components/Hero/Hero';
+
 // Contact Styles
 @import '../components/Contact/Contact';
