--- a/client/sass/_variables.scss
+++ b/client/sass/_variables.scss
@@ -1,5 +1,6 @@
 $grey: rgb(52, 56, 64);
-$dark: rgb(40, 44, 52);
+$dark: rgb(22, 22, 22);
+$darkT: rgba(22, 22, 22, .5);
 $extra_dark: rgb(33, 35, 43);
 $blue: rgb(97, 218, 251);
 $off_white: rgb(245, 246, 245);
