updated styling for hero responsiveness

--- a/client/components/Hero/_Hero.scss
+++ b/client/components/Hero/_Hero.scss
@@ -6,6 +6,7 @@
         top: 160px;
         float: left;
         margin-left: 100px;
+        text-align: center;
         
         h3 {
             font-size: 30px;
@@ -26,6 +27,7 @@
         top: 130px;
         float: right;
         margin-right: 100px;
+        text-align: center;
 
         i {
             font-size: 25px;
@@ -62,6 +64,7 @@
     .part {
         padding: 40px 20px 50px;
         background: $darkT;
+        overflow: hidden;
     }
 
     @media (max-width: 1260px) {
