added responsive code for hero

--- a/client/components/Shared/components/SideNav/_SideNav.scss
+++ b/client/components/Shared/components/SideNav/_SideNav.scss
@@ -4,6 +4,16 @@
         color: white !important;
         text-decoration: none !important;
         overflow-x: hidden !important;
+
+        &::-webkit-scrollbar {
+            display: none !important;
+        }
+
+        * {
+            &::-webkit-scrollbar {
+                display: none !important;
+            }
+        }
    }
 
    .side-nav-menu {
