--- a/client/sass/style.scss
+++ b/client/sass/style.scss
@@ -8,6 +8,9 @@
 @import '../components/Shared/components/TopNav/TopNav';
 @import '../components/Shared/components/SideNav/SideNav';
 
+// Skills Styles
+@import '../components/Skills/Skills';
+
 // Portfolio Styles
 @import '../components/Portfolio/Portfolio';
 
