--- a/client/components/Skills/_Skills.scss
+++ b/client/components/Skills/_Skills.scss
@@ -1,4 +1,14 @@
 // put all styles for a component in a component's container class to make sure you don't accidently style something in another component
 .skills-container {
-    
+    overflow: hidden;
+
+    .chart-container {
+        width: 100%;
+        max-width: 100%;
+        height: 380px;
+
+        -webkit-transition: background-color 750ms linear;
+        -ms-transition: background-color 750ms linear;
+        transition: background-color 750ms linear;
+    }
 }
