--- a/client/components/Skills/_Skills.scss
+++ b/client/components/Skills/_Skills.scss
@@ -5,10 +5,29 @@
     .chart-container {
         width: 100%;
         max-width: 100%;
-        height: 380px;
+        min-height: 400px !important;
 
-        -webkit-transition: background-color 750ms linear;
-        -ms-transition: background-color 750ms linear;
-        transition: background-color 750ms linear;
+        -webkit-transition: background-color 1500ms linear;
+        -ms-transition: background-color 1500ms linear;
+        transition: background-color 1500ms linear;
+
+        .current-ht {
+            position: relative;
+            top: 185px;
+            left: 45%;
+            z-index: 999999999;
+            color: $blue;
+            background: $darkT;
+            border: none;
+            min-width: 80px;
+            max-width: 150px;
+            word-wrap: break-word;
+            text-align: center;
+            font-size: 30px;
+            
+            -webkit-transition: all 1500ms linear;
+            -ms-transition: all 1500ms linear;
+            transition: all 1500ms linear;
+        }
     }
 }
