--- a/client/sass/_global.scss
+++ b/client/sass/_global.scss
@@ -94,6 +94,14 @@ div[role="menu"] {
     color: $blue;
 }
 
+.blue-text {
+    color: $blue;
+    
+    * {
+        color: $blue;
+    }
+}
+
 
 
 
