--- a/client/sass/style.scss
+++ b/client/sass/style.scss
@@ -11,6 +11,9 @@
 // Skills Styles
 @import '../components/Skills/Skills';
 
+// PortfolioRepeater Styles
+@import '../components/PortfolioRepeater/PortfolioRepeater';
+
 // Portfolio Styles
 @import '../components/Portfolio/Portfolio';
 
