--- a/client/components/Contact/_Contact.scss
+++ b/client/components/Contact/_Contact.scss
@@ -1,4 +1,4 @@
 // put all styles for a component in a component's container class to make sure you don't accidently style something in another component
-.portfolio-container {
-    
+.contact-container {
+    width: 100%;
 }
