Added more projects to the portfolio page and updated location information

--- a/client/sass/_global.scss
+++ b/client/sass/_global.scss
@@ -102,6 +102,13 @@ div[role="menu"] {
     }
 }
 
+.fixed-bottom-container {
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+    left: 0;
+}
+
 
 
 
