--- a/client/components/PortfolioRepeater/_PortfolioRepeater.scss
+++ b/client/components/PortfolioRepeater/_PortfolioRepeater.scss
@@ -3,14 +3,15 @@
         display: inline-block;
         margin: 10px;
         overflow: hidden;
+        position: relative;
 
         img {
             height: 200px;
         }
 
         width: 350px;
-        height: 370px;
-        max-height: 370px;
+        height: 400px;
+        max-height: 400px;
         background-color: $darkT;
         
         .portfolio-item-btn-container {
@@ -18,9 +19,7 @@
            justify-content: flex-start;
            
            .portfolio-item-btn {
-               margin-top: 5px;
-               margin-right: 5px;
-               margin-bottom: 5px;
+               margin: 5px;               
            }
         }
     }
@@ -62,6 +61,7 @@
 
         .portfolio-item {
             height: auto;
+            min-height: 410px;
         }
     }
 
@@ -98,6 +98,7 @@
     @media (max-width: 385px) {
         .portfolio-item {
             width: 300px;
+            height: auto;
         }
 
         & {
@@ -108,6 +109,7 @@
     @media (max-width: 335px) {
         .portfolio-item {
             width: 250px;
+            height: auto;
         }
         
         & {
@@ -118,7 +120,7 @@
     @media (max-width: 340px) {
         .portfolio-item {
             width: 200px;
-            height: 275px;
+            height: auto;
             text-align: center;
 
             .portfolio-item-btn {
