--- a/client/components/PortfolioRepeater/_PortfolioRepeater.scss
+++ b/client/components/PortfolioRepeater/_PortfolioRepeater.scss
@@ -4,7 +4,7 @@
         margin: 10px;
         overflow: hidden;
         position: relative;
-
+        
         img {
             height: 200px;
         }
@@ -12,7 +12,7 @@
         width: 350px;
         height: 400px;
         max-height: 400px;
-        background-color: $darkT;
+        background-color: $extra_darkT;
         
         .portfolio-item-btn-container {
            display: flex;
@@ -61,7 +61,7 @@
 
         .portfolio-item {
             height: auto;
-            min-height: 410px;
+            min-height: 440px;
         }
     }
 
