--- a/client/components/Skills/_Skills.scss
+++ b/client/components/Skills/_Skills.scss
@@ -18,7 +18,7 @@
             left: 45%;
             z-index: 999999999;
             color: $blue;
-            background: $darkT;
+            background: $extra_darkT;
             border: none;
             min-width: 80px;
             max-width: 150px;
