--- a/client/sass/_global.scss
+++ b/client/sass/_global.scss
@@ -109,6 +109,28 @@ div[role="menu"] {
     left: 0;
 }
 
+.form-input {
+    &:-webkit-autofill,
+    &:-webkit-autofill:hover,
+    &:-webkit-autofill:focus,
+    &:-webkit-autofill:active {
+         -webkit-box-shadow: 0 0 0 30px $extra_dark inset !important;
+         -webkit-text-fill-color: rgb(255,255,255) !important;
+         border: none !important;
+    }
+
+    * {
+          &:-webkit-autofill,
+          &:-webkit-autofill:hover,
+          &:-webkit-autofill:focus,
+          &:-webkit-autofill:active {
+              -webkit-box-shadow: 0 0 0 30px $extra_dark inset !important;
+              -webkit-text-fill-color: rgb(255,255,255) !important;
+              border: none !important;
+          }
+    }
+}
+
 
 
 
