--- a/client/sass/_global.scss
+++ b/client/sass/_global.scss
@@ -1,18 +1,18 @@
 // Styles that aren't specific to a component can go here
 // including reusable classes
 
-body {
-    background: $grey;
-
+body, html {
     * {
         color: $off_white;
     }
 
-    background: url('/images/wood-background-img.jpg') no-repeat center center fixed; 
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+    // background: url('/images/wood-background-img.jpg') no-repeat center center fixed; 
+    // -webkit-background-size: cover;
+    // -moz-background-size: cover;
+    // -o-background-size: cover;
+    // background-size: cover;
+
+    background-color: rgb(39,44,52);
 }
 
 .margin-center {
